# Solana-friends-tech

./: Cargo.toml  readme.md
src/: main.rs  test.rs
src/friendTech/: solanaFriendTech.rs
